<resources>
    <string name="app_name">WaiterMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- GENERAL -->
    <string name="tables">Tables</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="go_back">Go back</string>
    <string name="waiterme">WaiterMe</string>
    <string name="empty_values">There are empty fields</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="add">Add</string>


    <!-- ERRORES -->
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_max_people_empty">Max People cannot be empty</string>


    <!-- LOGIN REGISTER-->
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="email_example">you@example.com</string>
    <string name="password">Password</string>
    <string name="password_example">******</string>
    <string name="password_confirm">Confirm password</string>
    <string name="sing_up">Sing up</string>
    <string name="continue_">Continue</string>
    <string name="hi_there">Hi there! Nice to see you again.</string>
    <string name="register_info">Hi! This account is for all your employees, which means that the ID and password are common to all your employees.</string>
    <string name="pass_not_match">Passwords do not match</string>
    <string name="pass_too_short">The password is too short (min 6 chars)</string>
    <string name="already_user">There is already a user with this account</string>
    <string name="register_admin_pass">Admin password</string>
    <string name="register_admin_pass_desc">4-digit pin that gives access to the administrator panel of the local. It is private.</string>

    <!-- SELECT ROL -->
    <string name="select_rol">Select your role</string>
    <string name="employee_name">Employee name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="receptionist">Receptionist</string>
    <string name="waiter">Waiter</string>
    <string name="chef">Chef</string>
    <string name="admin_panel">Admin panel</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="wrong_pin">The pin is not correct</string>


    <!-- RECEPCIONIST -->
    <string name="take_a_sit">Take a sit</string>
    <string name="customers_pay">Customers pay</string>
    <string name="to_pay">To pay</string>
    <string name="paid">Paid</string>
    <string name="details">details</string>
    <string name="take_up_the_table">Take up the table?</string>
    <string name="take_it">Take it</string>
    <string name="msg_paid">Payment completed</string>

    <!-- WAITER -->

    <string name="orders_actives">Orders actives</string>
    <string name="send_orders">Send orders</string>
    <string name="view_orders">View orders</string>
    <string name="new_order">New order</string>
    <string name="table">Table</string>
    <string name="send">Send</string>
    <string name="finish">Finish</string>
    <string name="some_modification">Some Modification?</string>
    <string name="none">None</string>
    <string name="delete">Delete</string>


    <!-- CHEF -->
    <string name="take">Take</string>
    <string name="done">Done</string>


    <!-- ADMIN PANEL -->
    <string name="employees_statistics">Employees statistics</string>
    <string name="payment_statistics">Payment statistics</string>
    <string name="manage_tables">Manage tables</string>
    <string name="manage_food">Manage food</string>
    <string name="plates">Plates</string>
    <string name="people">People</string>
    <string name="order_minus">O.</string>
    <string name="this_year">This year</string>
    <string name="this_month">This month</string>
    <string name="today">Today</string>
    <string name="edit_table">Enter table name</string>
    <string name="add_table_name">Name/ID</string>
    <string name="add_table_max">Max Ppl.</string>

    <string name="add_Food_name">Name/ID</string>
    <string name="add_Food_max">Price</string>

    <string name="add_table_Title">Add Table</string>
    <string name="add_Food_Title">Add Food</string>
    <string name="added_table">The table was successfully added:</string>
    <string name="price">Price: </string>
    <string name="price_subfix">$</string>
    <string name="edit_food">Enter food name</string>

    <string name="upload_picture_method">Select method</string>
    <string name="galery">GALERY</string>
    <string name="camera">CAMERA</string>

    <string name="has_been_uploaded_successfully">Has been uploaded successfully</string>
    <string name="operation_was_canceled">Operation was canceled</string>


</resources>
