<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.LoginFragment">

        <ImageView
            android:id="@+id/iv_LoginIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_Login_SingIn"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sing_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_LoginIcon" />

        <TextView
            android:id="@+id/tv_Login_SubSingIn"
            style="@style/SubHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="182dp"
            android:text="@string/hi_there"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_Login_SingIn"
            app:layout_constraintTop_toBottomOf="@+id/tv_Login_SingIn" />

        <EditText
            android:id="@+id/et_Login_Email"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/tv_Login_SubSingIn"
            app:layout_constraintTop_toBottomOf="@+id/tv_Login_EmailLabel" />

        <TextView
            android:id="@+id/tv_Login_EmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@+id/tv_Login_SubSingIn"
            app:layout_constraintTop_toBottomOf="@+id/tv_Login_SubSingIn" />

        <TextView
            android:id="@+id/tv_Login_PasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@+id/et_Login_Email"
            app:layout_constraintTop_toBottomOf="@+id/et_Login_Email" />

        <EditText
            android:id="@+id/et_Login_Password"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_example"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/tv_Login_PasswordLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_Login_PasswordLabel" />

        <Button
            android:id="@+id/bt_Login_SingIn"
            style="@style/StandardButton"
            android:layout_marginTop="116dp"
            android:elevation="10dp"
            android:text="@string/sing_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Login_Password" />

        <Button
            android:id="@+id/bt_Login_SingUp"
            style="@style/StandardButton"
            android:layout_marginTop="12dp"
            android:text="@string/sing_up"
            app:layout_constraintEnd_toEndOf="@+id/bt_Login_SingIn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bt_Login_SingIn"
            app:layout_constraintTop_toBottomOf="@+id/bt_Login_SingIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>